--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,14 @@ body {
   margin: 0;
 }
 
-.navbar-container,
+nav,
 .content-container,
-.footer-container {
+footer {
   padding-left: calc((100% - 1200px) / 2);
   padding-right: calc((100% - 1200px) / 2);
 }
 
-.navbar-container {
+nav {
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 5px solid #f2f2f2;
@@ -23,7 +23,7 @@ body {
   align-items: center;
   justify-content: space-between;
 
-  ul {
+  .nav-links {
     list-style-type: none;
     display: flex;
     gap: 20px;
@@ -33,19 +33,19 @@ body {
 
     a {
       text-decoration: none;
-      color: #333333;
+      color: #cc0000;
       font-size: 18px;
       font-weight: 700;
     }
   }
 
-  .navbar-name {
+  .nav-name {
     font-size: 24px;
     font-weight: 700;
     text-align: center;
   }
 
-  .navbar-socials {
+  .nav-socials {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -63,16 +63,19 @@ body {
 }
 
 .content-container {
-  min-height: calc(100vh - (92.5px + 39px));
+  min-height: calc(100vh - (92.5px + 50px));
 }
 
-.footer-container {
+footer {
   display: flex;
-  background-color: #333333;
+  align-items: center;
+  height: 50px;
+  background-color: #212121;
 
   .footer-copyright {
     font-size: 12px;
     color: white;
+    margin: 0;
 
     a {
       color: #cc0000;
@@ -93,39 +96,50 @@ body {
   }
 }
 
+/* md and lg devices or tablets */
+@media (min-width: 768px) and (max-width: 1023px),
+  (min-width: 1024px) and (max-width: 1279px) {
+  nav,
+  .content-container,
+  footer {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 /* xs and sm devices or phones */
 @media (max-width: 479px), (min-width: 480px) and (max-width: 767px) {
-  .navbar-container,
+  nav,
   .content-container,
-  .footer-container {
+  footer {
     padding-left: 20px;
     padding-right: 20px;
   }
 
-  .navbar-container {
-    ul,
-    .navbar-socials {
+  nav {
+    .nav-links,
+    .nav-socials {
       display: none;
     }
 
-    .navbar-name {
+    .nav-name {
       width: 100%;
     }
   }
 
   .content-container {
-    min-height: calc(100vh - (73px + 126.5px));
+    min-height: calc(100vh - (73px + 100px));
   }
 
-  .footer-container {
+  footer {
     text-align: center;
     display: flex;
     flex-direction: column-reverse;
-    align-items: center;
+    justify-content: center;
+    height: 100px;
 
     .footer-socials {
       display: flex;
-      padding-top: 10px;
     }
   }
 }
