--- a/css/main.css
+++ b/css/main.css
@@ -56,18 +56,19 @@ nav {
     }
 
     img {
-      height: 16px;
-      width: 16px;
+      height: 20px;
+      width: 20px;
     }
   }
 }
 
 .content-container {
-  min-height: calc(100vh - (92.5px + 50px));
+  min-height: calc(100vh - (96.5px + 50px));
 }
 
 footer {
   display: flex;
+  justify-content: center;
   align-items: center;
   height: 50px;
   background-color: #212121;
