--- a/css/main.css
+++ b/css/main.css
@@ -16,12 +16,12 @@ footer {
 }
 
 nav {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: 5px solid #f2f2f2;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 5px solid #f2f2f2;
 
   .nav-links {
     list-style-type: none;
@@ -45,6 +45,28 @@ nav {
     text-align: center;
   }
 
+  .nav-logo {
+    display: flex;
+
+    img {
+      height: 50px;
+      width: 50px;
+    }
+  }
+
+  .nav-menu-container {
+    display: none;
+
+    button.nav-menu-button {
+      display: flex;
+      padding: 8px;
+      background: none;
+      border: 1px solid #cc0000;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  }
+
   .nav-socials {
     display: flex;
     justify-content: flex-end;
@@ -63,14 +85,14 @@ nav {
 }
 
 .content-container {
-  min-height: calc(100vh - (96.5px + 50px));
+  min-height: calc(100vh - (96.5px + 60px));
 }
 
 footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  height: 60px; /* Update content-container above when changing */
   background-color: #212121;
 
   .footer-copyright {
@@ -110,6 +132,10 @@ footer {
 
 /* xs and sm devices or phones */
 @media (max-width: 479px), (min-width: 480px) and (max-width: 767px) {
+  #root {
+    overflow: hidden;
+  }
+
   nav,
   .content-container,
   footer {
@@ -118,18 +144,44 @@ footer {
   }
 
   nav {
-    .nav-links,
+    position: relative;
+    background: white;
+    z-index: 1;
+
     .nav-socials {
       display: none;
+    }
+
+    .nav-links {
+      position: absolute;
+      flex-direction: column;
+      top: 98.5px;
+      right: -100%;
+      width: 100%;
+      background: white;
+      transition: right 0.2s ease;
+
+      li {
+        padding: 16px;
+        width: calc(100% - 32px);
+      }
+    }
+
+    .nav-links.active {
+      right: 0;
     }
 
     .nav-name {
       width: 100%;
     }
+
+    .nav-menu-container {
+      display: block;
+    }
   }
 
   .content-container {
-    min-height: calc(100vh - (73px + 100px));
+    min-height: calc(100vh - (73px + 120px));
   }
 
   footer {
@@ -137,7 +189,7 @@ footer {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
-    height: 100px;
+    height: 120px; /* Update content-container above when changing */
 
     .footer-socials {
       display: flex;
