--- a/css/contact.css
+++ b/css/contact.css
@@ -1,56 +1,38 @@
-.contact-container {
-  .contact-message-container {
-    text-align: center;
-    padding: 70px 30px 20px;
+.contact-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px 20px 70px;
+}
 
-    h2 {
-      margin: 0;
-      color: #212121;
-    }
+.contact-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding: 24px 34px;
+  background: #f2f2f2;
+  border-radius: 5px;
+}
 
-    p {
-      margin: 10px 0 0;
-      color: #212121;
-      line-height: 20px;
-    }
+.contact-icon img {
+  height: 40px;
+}
+
+.contact-message {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  p {
+    margin: 0;
+    color: #616161;
+    font-weight: 700;
   }
 
-  .contact-list-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px 20px 70px;
-  }
-
-  .contact-list-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    padding: 24px 34px;
-    background: #f2f2f2;
-    border-radius: 5px;
-
-    .contact-list-item-icon img {
-      height: 40px;
-    }
-
-    .contact-list-item-message {
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-
-      p {
-        margin: 0;
-        color: #616161;
-        font-weight: 700;
-      }
-
-      a {
-        color: #cc0000;
-      }
-    }
+  a {
+    color: #cc0000;
   }
 }
