--- a/css/main.css
+++ b/css/main.css
@@ -1,198 +1,228 @@
-#root {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 html,
 body {
   padding: 0;
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-nav,
-.content-container,
-footer {
+/* || Page Nav */
+
+.page-nav,
+.page-header,
+.page-content,
+.page-footer {
   padding-left: calc((100% - 1200px) / 2);
   padding-right: calc((100% - 1200px) / 2);
 }
 
-nav {
+.page-nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 5px solid #f2f2f2;
+}
 
-  .nav-links {
-    list-style-type: none;
-    display: flex;
-    gap: 20px;
-    padding: 0;
-    margin: 0;
-    width: 30%;
+.nav-items {
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+  padding: 0;
+  margin: 0;
+  width: 30%;
 
-    a {
-      text-decoration: none;
-      color: #cc0000;
-      font-size: 18px;
-      font-weight: 700;
-    }
-  }
-
-  .nav-name {
-    font-size: 24px;
+  a {
+    text-decoration: none;
+    color: #cc0000;
+    font-size: 18px;
     font-weight: 700;
-    text-align: center;
-  }
-
-  .nav-logo {
-    display: flex;
-
-    img {
-      height: 50px;
-      width: 50px;
-    }
-  }
-
-  .nav-menu-container {
-    display: none;
-
-    button.nav-menu-button {
-      display: flex;
-      padding: 8px;
-      background: none;
-      border: 1px solid #cc0000;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-  }
-
-  .nav-socials {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 30%;
-
-    a {
-      padding: 14px;
-    }
-
-    img {
-      height: 20px;
-      width: 20px;
-    }
   }
 }
 
-.content-container {
-  min-height: calc(100vh - (96.5px + 80px));
+.nav-logo {
+  height: 50px;
+  width: 50px;
 }
 
-footer {
+.nav-menu-button {
+  display: none;
+  padding: 8px;
+  background: none;
+  border: 1px solid #cc0000;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.nav-socials {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 30%;
+
+  a {
+    padding: 14px;
+  }
+
+  img {
+    height: 20px;
+    width: 20px;
+  }
+}
+
+/* || Page Header */
+
+.page-header {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  h1 {
+    margin: 0;
+    font-size: 60px;
+    color: #212121;
+  }
+
+  p {
+    margin: 15px 0 0;
+    font-size: 20px;
+    color: #616161;
+  }
+}
+
+/* || Page Content */
+
+.page-content {
+  min-height: calc(100vh - (96.5px + 200px + 60px));
+}
+
+/* || Page Footer */
+
+.page-footer {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 60px;
   background-color: #212121;
+}
 
-  .footer-copyright {
-    font-size: 12px;
-    color: white;
-    margin: 0;
+.footer-copyright {
+  font-size: 12px;
+  color: white;
+  margin: 0;
 
-    a {
-      color: #cc0000;
-    }
-  }
-
-  .footer-socials {
-    display: none;
-
-    a {
-      padding: 14px;
-    }
-
-    img {
-      height: 16px;
-      width: 16px;
-    }
+  a {
+    color: #cc0000;
   }
 }
 
-/* md and lg devices or tablets */
+.footer-socials {
+  display: none;
+
+  a {
+    padding: 14px;
+  }
+
+  img {
+    height: 16px;
+    width: 16px;
+  }
+}
+
+/* || md and lg devices or tablets */
 @media (min-width: 768px) and (max-width: 1023px),
   (min-width: 1024px) and (max-width: 1279px) {
-  nav,
-  .content-container,
-  footer {
+  .page-nav,
+  .page-header,
+  .page-content,
+  .page-footer {
     padding-left: 20px;
     padding-right: 20px;
   }
 }
 
-/* xs and sm devices or phones */
+/* || xs and sm devices or phones */
 @media (max-width: 479px), (min-width: 480px) and (max-width: 767px) {
-  #root {
-    overflow: hidden;
-  }
-
-  nav,
-  .content-container,
-  footer {
+  .page-nav,
+  .page-header,
+  .page-content,
+  .page-footer {
     padding-left: 20px;
     padding-right: 20px;
   }
 
-  nav {
+  /* || Page Nav */
+
+  .page-nav {
     position: relative;
     background: white;
     z-index: 1;
+  }
 
-    .nav-socials {
-      display: none;
-    }
+  .nav-socials {
+    display: none;
+  }
 
-    .nav-links {
-      position: absolute;
-      flex-direction: column;
-      top: 98.5px;
-      right: -100%;
-      width: 100%;
-      background: white;
-      transition: right 0.2s ease;
+  .nav-items {
+    position: absolute;
+    flex-direction: column;
+    gap: 0;
+    top: 94px;
+    left: 0;
+    width: 100%;
+    background: #f2f2f2;
+    transition: max-height 0.2s ease;
+    max-height: 0;
+    overflow: hidden;
 
-      li {
-        padding: 16px;
-        width: calc(100% - 32px);
-      }
-    }
-
-    .nav-links.active {
-      right: 0;
-    }
-
-    .nav-name {
-      width: 100%;
-    }
-
-    .nav-menu-container {
-      display: block;
+    li {
+      padding: 16px;
+      width: calc(100% - 32px);
     }
   }
 
-  .content-container {
-    min-height: calc(100vh - (95px + 140px));
+  .nav-items.active {
+    max-height: 150px; /* Increase if more items are added and necessary */
   }
 
-  footer {
+  .nav-menu-button {
+    display: flex;
+  }
+
+  /* || Page Header */
+
+  .page-header {
+    height: 200px;
+
+    h1 {
+      font-size: 25px;
+    }
+
+    p {
+      font-size: 14px;
+    }
+  }
+
+  /* || Page Content */
+
+  .page-content {
+    min-height: calc(100vh - (95px + 200px + 120px));
+  }
+
+  /* || Page Footer */
+
+  .page-footer {
     text-align: center;
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
     height: 120px;
+  }
 
-    .footer-socials {
-      display: flex;
-    }
+  .footer-socials {
+    display: flex;
   }
 }
